Removed garbage.